--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "web_test_project",
-    "short_name": "web_test_project",
+    "name": "greens_and_bunkers",
+    "short_name": "greens_and_bunkers",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
